added delete functionality

--- a/Sprint3Challenge-Pokedex/Resources/Base.lproj/Main.storyboard
+++ b/Sprint3Challenge-Pokedex/Resources/Base.lproj/Main.storyboard
@@ -159,7 +159,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" placeholder="Search by name:" translatesAutoresizingMaskIntoConstraints="NO" id="a4l-jn-mA4">
+                            <searchBar contentMode="redraw" placeholder="Search by name or ID:" translatesAutoresizingMaskIntoConstraints="NO" id="a4l-jn-mA4">
                                 <rect key="frame" x="0.0" y="140" width="414" height="56"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                             </searchBar>
